   `dunnowa_index`,
   `generalised_dunn_index`,
   `negated_ball_hall_index`,
   `negated_davies_bouldin_index`,
   `negated_wcss_index`,
   `silhouette_index`,
   `silhouette_w_index`,
   `wcnn_index`.

-  [BACKWARD INCOMPATIBILITY] `compare_partitions.normalized_confusion_matrix`
   now solves the maximal assignment problem instead of applying
   the primitive partial pivoting.

-  [Python and R] New function: `normalizing_permutation`.

-  [R] New function: `normalized_confusion_matrix`.


## 1.0.1 (2022-08-08)

-  [GENERAL] A paper on the `genieclust` package is now available:
   M. Gagolewski, genieclust: Fast and robust hierarchical clustering,
   *SoftwareX* **15**, 100722, 2021, DOI:
   [10.1016/j.softx.2021.100722](https://doi.org/10.1016/j.softx.2021.100722).

-  [Python] `plots.plot_scatter` now uses a more accessible default palette
   (from R 4.0.0).

-  [Python] New function: `inequity.devergottini_index`.

-  [R] New function: `devergottini_index`.


## 1.0.0 (2021-04-22)

-  [R] Use `mlpack` instead of `RcppMLPACK` (#72).
   This package is merely suggested, not dependent upon.


## 0.9.8 (2021-01-08)

-  [Python] Require Python >= 3.7 (implied by `numpy`).

-  [Python] Require `nmslib`.

-  [R] Use `RcppMLPACK` directly; remove dependency on `emstreeR`.

-  [R] Use `tinytest` for unit testing instead of `testthat`.


## 0.9.4 (2020-07-31)

-  [BUGFIX] [R] Fix build errors on Solaris.


## 0.9.3 (2020-07-25)

-  [BUGFIX] [Python] Add code coverage CI. Fix some minor inconsistencies.
   Automate the `bdist` build chain.

-  [R] Update DESCRIPTION to meet the CRAN policies.


## 0.9.2 (2020-07-22)

-  [BUGFIX] [Python] Fix broken build script for OS X with no OpenMP.


## 0.9.1 (2020-07-18)

-  [GENERAL] The package has been completely rewritten.
   The core functionality is now implemented in C++ (with OpenMP).

-  [GENERAL] Clustering with respect to HDBSCAN*-like
   mutual reachability distances is supported.
